Error handling interface